<resources>

    <!-- Strings for activity_main -->
    <string name="RENTABLES">RENTABLES</string>
    <string name="app_name">Rentables</string>
    <string name="login_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="login_button_text">Log in</string>
    <string name="Register">Register</string>
    <string name="forgot_password"><u>FORGOT PASSWORD</u></string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up"><u>SIGN UP</u></string>

    <!-- Strings for dialog_fragment_forgot_pass-->
    <string name="enter_username">Please enter your username</string>

    <!-- Strings for activity_register_user -->
    <string name="register_email">Email</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_password">Password</string>
    <string name="register_password_confirm">Confirm Password</string>
    <string name="register_button">REGISTER</string>
    <string name="registration_successful">Registration was Successful!</string>
    <string name="registration_continue">CONTINUE</string>

    <!-- Strings for the overflow menu -->
    <string name="overflow_settings_string">Settings</string>
    <string name="overflow_account_string">Account</string>
    <string name="overflow_logout_string">Logout</string>
    <string name="overflow_advanced_search_string">Advanced Search</string>

    <!-- String for home fragment -->
    <string name="create_post_button">CREATE POST</string>

    <!-- String for browse fragment -->
    <string name="toolbar_search_string">Keywords</string>
    <string name="advanced_search_submit_string">Search</string>

    <!-- Strings for advanced search dialog fragment -->
    <string name="advanced_search_minimum_string">Min</string>
    <string name="advanced_search_maximum_string">Max</string>
    <string name="advanced_search_hours">Hours</string>
    <string name="advanced_search_days">Days</string>
    <string name="advanced_search_weeks">Weeks</string>
    <string name="advanced_search_months">Months</string>

    <!-- Strings for createpost_fragment -->
    <string name="createpost_submit_button">SUBMIT</string>
    <string name="createpost_dialog_button">CONTINUE</string>
    <string name="create_listing_activity_title_string">Create Your Listing</string>
    <string name="create_listing_title_hint_string">Your Listing\'s Title…</string>
    <string name="create_listing_title_string">Create a simple title for your listing.</string>
    <string name="create_listing_description_hint_string">Description…</string>
    <string name="create_listing_description_string">Add a description of the item you are selling.</string>
    <string name="create_listing_price_hint_string">0.00</string>
    <string name="create_listing_per">per</string>
    <string name="create_listing_dollar">$</string>
    <string name="create_listing_per_text_view_string">The amount you would like to rent your item for and for how long.</string>
    <string name="create_listing_additional_details_hint">Additional Details…</string>
    <string name="create_listing_additional_details_string">Add any additional details you would like to add put here.</string>
    <string name="create_listing_button_string">Create Listing</string>
    <string name="create_listing_add_image">Add a Photo!</string>
    <string name="create_listing_no_photo">No photos selected yet!</string>

    <string name="user_posts_title">User Posts</string>

    <string-array name="RentalTime">
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
