<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteSmoke">
    <include
    layout="@layout/toolbar_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingBottom="32dp">
            <EditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_email"
                android:inputType="textWebEmailAddress"
                android:maxLines="1"/>
            <EditText
                android:id="@+id/register_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_first_name"
                android:inputType="textCapSentences"
                android:maxLines="1"/>
            <EditText
                android:id="@+id/register_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_last_name"
                android:inputType="textCapSentences"
                android:maxLines="1"/>
            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:maxLines="1"/>
            <EditText
                android:id="@+id/register_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password_confirm"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_marginBottom="20dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_button"
                android:textColor="@color/white"
                android:onClick="registerUser"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>