<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar_main"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/create_listing_content_1">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_listing_activity_title"
                    android:text="@string/create_listing_activity_title_string"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/rentColorPrimaryDark"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_listing_title_edit_text"
                    android:hint="@string/create_listing_title_hint_string"
                    android:inputType="textShortMessage"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_listing_title_text_view"
                    android:text="@string/create_listing_title_string"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_listing_description_edit_text"
                    android:hint="@string/create_listing_description_hint_string"
                    android:layout_marginTop="15dp"
                    android:inputType="textMultiLine"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_listing_description_text_view"
                    android:text="@string/create_listing_description_string"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_listing_add_photo"
                    android:layout_marginTop="15dp"
                    android:text="@string/create_listing_add_image" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:layout_marginTop="20dp">

                    <ImageButton
                        android:id="@+id/image_button"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:src="@drawable/ic_add_a_photo_white_36dp"
                        android:background="@color/grey"
                        android:onClick="selectImage" />
                    <ImageView
                        android:id="@+id/target_image1"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/image_button"
                        android:background="@drawable/image_view_border" />
                    <ImageButton
                        android:id="@+id/image_delete_button1"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_alignRight="@+id/target_image1"
                        android:src="@drawable/ic_clear_white_24dp"
                        android:background="@drawable/circle_button"
                        android:onClick="removeImage"
                        android:visibility="gone"/>
                    <TextView
                        android:id="@+id/image_view_text_overlay1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No photo selected yet"
                        android:textSize="10dp"
                        android:layout_alignLeft="@+id/target_image1"
                        android:layout_alignRight="@+id/target_image1"
                        android:layout_alignBottom="@+id/target_image1"
                        android:layout_alignTop="@+id/target_image1"
                        android:gravity="center"/>


                    <ImageView
                        android:id="@+id/target_image2"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/target_image1"
                        android:background="@drawable/image_view_border" />
                    <ImageButton
                        android:id="@+id/image_delete_button2"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_alignRight="@+id/target_image2"
                        android:src="@drawable/ic_clear_white_24dp"
                        android:background="@drawable/circle_button"
                        android:onClick="removeImage"
                        android:visibility="gone"/>
                    <TextView
                        android:id="@+id/image_view_text_overlay2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No photo selected yet"
                        android:textSize="10dp"
                        android:layout_alignLeft="@+id/target_image2"
                        android:layout_alignRight="@+id/target_image2"
                        android:layout_alignBottom="@+id/target_image2"
                        android:layout_alignTop="@+id/target_image2"
                        android:gravity="center"/>


                    <ImageView
                        android:id="@+id/target_image3"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/target_image2"
                        android:background="@drawable/image_view_border" />
                    <ImageButton
                        android:id="@+id/image_delete_button3"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_alignRight="@+id/target_image3"
                        android:src="@drawable/ic_clear_white_24dp"
                        android:background="@drawable/circle_button"
                        android:onClick="removeImage"
                        android:visibility="gone"/>
                    <TextView
                        android:id="@+id/image_view_text_overlay3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_listing_no_photo"
                        android:textSize="10dp"
                        android:layout_alignLeft="@+id/target_image3"
                        android:layout_alignRight="@+id/target_image3"
                        android:layout_alignBottom="@+id/target_image3"
                        android:layout_alignTop="@+id/target_image3"
                        android:gravity="center"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_listing_dollar"
                        android:textSize="20sp"
                        android:textColor="@color/rentColorPrimaryDark" />
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/create_listing_price_edit_text"
                        android:hint="@string/create_listing_price_hint_string"
                        android:inputType="numberDecimal"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_listing_per"
                        android:textSize="20sp"
                        android:layout_marginStart="15dp"/>
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/create_listing_per_spinner"
                        android:layout_marginStart="15dp"
                        android:paddingTop="1dp"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_listing_per_text_view_string"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/create_listing_button_string"
                    android:textColor="@color/white"
                    android:layout_gravity="right"
                    android:onClick="createListing"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>