<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rentables.testcenter.activity.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/rentColorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="32dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="32dp"
            android:gravity="center_vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="-2.5dp"
                android:layout_marginBottom="55dp">
                <TextView
                    android:id="@+id/main_activity_logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/RENTABLES"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="35sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/rentBackgroundColor">
                <EditText
                    style="@style/EditTextCommonBackground"
                    android:id="@+id/username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_placeholder"
                    android:inputType="textWebEmailAddress"
                    android:textColor="@color/lighterBlack" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/rentBackgroundColor"
                android:layout_marginTop="10dp">
                <EditText
                    style="@style/EditTextCommonBackground"
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_placeholder"
                    android:inputType="textPassword"
                    android:textColor="@color/lighterBlack"/>
            </LinearLayout>
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:clickable="true"
                android:onClick="forgotPassword"
                android:textSize="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="30dp"
                android:textColor="@color/rentBackgroundColor"
                android:fontFamily="sans-serif-light"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="LOG IN"
                    android:background="@color/rentEcstasy"
                    android:textColor="@color/rentBackgroundColor"
                    android:onClick="userLogin"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="SIGN UP"
                    android:background="@color/rentColorAccent"
                    android:textColor="@color/rentBackgroundColor"
                    android:onClick="startRegisterUserActivity"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

